# k2eg

./: .clang-format  .dockerignore  .gitignore  .gitmessage  AGENTS.md  CMakeLists.txt  Dockerfile.debian_bullseye  Dockerfile.ubuntu  Dockerfile.ubuntu_kinetic  GitVersion.yml  LICENSE.md  README.md  k2eg.h.in
.devcontainer/: Dockerfile  Dockerfile.ubuntu  devcontainer.json  docker-compose.yml
.github/workflows/: build-docker-image.yml  build-python-cli  build-python-cli.yml  build.yml  clean-docerk-images.yml  clear-untagged-images.yml  codeql.yml  geenrate-new-version.yml  test.yml
cli/: requirements.txt  setup.py
cli/k2egcli/: __init__.py  __main__.py  cli.py  command.py  producer.py
configuration/: coverage.cmake
doc/: message-format.md  snapshots-over-kafka.md  storage.md
docker/: Dockerfile.epics  Dockerfile.epics.test  Dockerfile.epics_ca  Dockerfile.test  Dockerfile.ubuntu_test  DockerfileDevEnvironment  DockerfileRuntimeImage.epics  docker-compose-app.yml  docker-compose.yml  run-test.sh
docker/gcc/: Dockerfile.debian
k8s/: k2eg-single-node.yml
src/: main.cpp
src/k2eg/: config.h  k2eg.cpp  k2eg.h  version.h
src/k2eg/common/: BS_thread_pool.hpp  BaseSerialization.h  JsonSerialization.h  LockFreeBuffer.h  MsgpackSerialization.h  ObjectFactory.h  ProcSystemMetrics.cpp  ProcSystemMetrics.h  ProgramOptions.cpp  ProgramOptions.h  ResizableBuffer.h  ThrottleManagement.h  ThrottlingManager.h  TimeWindowEventBuffer.h  base64.h  broadcaster.h  serialization.h  types.h  utility.h  uuid.h
src/k2eg/controller/command/: CMDCommand.cpp  CMDCommand.h  CMDController.cpp  CMDController.h
src/k2eg/controller/command/cmd/: Command.h  GetCommand.h  InfoCommand.h  MonitorCommand.h  PutCommand.h  SnapshotCommand.h
src/k2eg/controller/node/: NodeController.cpp  NodeController.h
src/k2eg/controller/node/archiver/: ArchiverWorker.cpp  ArchiverWorker.h
src/k2eg/controller/node/configuration/: NodeConfiguration.cpp  NodeConfiguration.h
src/k2eg/controller/node/worker/: AcquireCommandWorker.cpp  AcquireCommandWorker.h  CommandWorker.cpp  CommandWorker.h  GetCommandWorker.cpp  GetCommandWorker.h  MonitorCommandWorker.cpp  MonitorCommandWorker.h  PutCommandWorker.cpp  PutCommandWorker.h  SnapshotCommandWorker.cpp  SnapshotCommandWorker.h  StorageWorker.cpp  StorageWorker.h  ThrottleOperation.h  WorkerResolver.h
src/k2eg/controller/node/worker/archiver/: BaseArchiver.cpp  BaseArchiver.h  SnapshotArchiver.cpp  SnapshotArchiver.h
src/k2eg/controller/node/worker/monitor/: ContinuousSnapshotManager.cpp  ContinuousSnapshotManager.h  MonitorChecker.cpp  MonitorChecker.h  MonitorCommandWorker.cpp  MonitorCommandWorker.h
src/k2eg/service/: ServiceRegistration.h  ServiceResolver.h
src/k2eg/service/configuration/: INodeConfiguration.cpp  INodeConfiguration.h  configuration.h
src/k2eg/service/data/: DataStorage.cpp  DataStorage.h
src/k2eg/service/data/repository/: ChannelRepository.cpp  ChannelRepository.h  PVRepository.cpp  PVRepository.h
src/k2eg/service/epics/: EpicsChannel.cpp  EpicsChannel.h  EpicsData.cpp  EpicsData.h  EpicsGetOperation.cpp  EpicsGetOperation.h  EpicsMonitorOperation.cpp  EpicsMonitorOperation.h  EpicsPutOperation.cpp  EpicsPutOperation.h  EpicsServiceManager.cpp  EpicsServiceManager.h  JsonSerialization.cpp  JsonSerialization.h  JsonSerializer.cpp  JsonSerializer.h  MsgPackSerialization.cpp  MsgPackSerialization.h  MsgpackComapctSerializer.cpp  MsgpackCompactSerialization.cpp  MsgpackCompactSerializer.h  MsgpackCompactSerializion.h  MsgpackEpicsConverter.cpp  MsgpackEpicsConverter.h  PVStructureMerger.cpp  PVStructureMerger.h  Serialization.h
src/k2eg/service/log/: ILogger.h
src/k2eg/service/log/impl/: BoostLogger.cpp  BoostLogger.h
src/k2eg/service/metric/: ICMDControllerMetric.h  IEpicsMetric.h  IMetricService.cpp  IMetricService.h  INodeControllerMetric.h  INodeControllerSystemMetric.h  IStorageNodeMetric.h
src/k2eg/service/metric/impl/: DummyMetricService.cpp  DummyMetricService.h  PrometheusMetricService.cpp  PrometheusMetricService.h
src/k2eg/service/pubsub/: IPublisher.cpp  IPublisher.h  ISubscriber.cpp  ISubscriber.h  pubsub.h
src/k2eg/service/scheduler/: Scheduler.cpp  Scheduler.h  Task.cpp  Task.h
src/k2eg/service/storage/: IStorageService.h  StorageServiceFactory.cpp  StorageServiceFactory.h
src/k2eg/service/storage/impl/: MongoDBStorageService.cpp  MongoDBStorageService.h  MsgpackToBsonConverter.cpp  MsgpackToBsonConverter.h
test/: NodeUtilities.h  epics-test-ca.db  epics-test.db  execute-ca-ioc.sh  k2eg-mailbox-server.py  k2eg.cpp  k2eg_nodes.cpp  test-conf-file.conf  test.cpp  update_iocs.py
test/common/: ProgramOptions.cpp
test/configuration/: ConsulConfigurationSnapshotGatewayTest.cpp  ConsulConfigurationSnapshotTest.cpp  ConsulConfigurationTest.cpp
test/controller/: CMDController.cpp  NodeController.cpp  NodeControllerCommon.h  NodeControllerMonitorChecker.cpp  NodeControllerReply.cpp  NodeControllerReplyMessages.cpp  NodeControllerSnapshot.cpp  NodeControllerStorageSnapshotTest.cpp
test/data/: DataStorage.cpp
test/epics/: epics.cpp  epics.h  epics_data_serialization.cpp  epics_msgpack_converter.cpp
test/metric/: CMDMetric.cpp  EpicsMetric.cpp  NodeControllerMetric.cpp  NodeControllerSystemMetric.cpp  metric.cpp  metric.h
test/pubsub/: common.h  kafka.cpp
test/scheduler/: Scheduler.cpp
test/service/configuration/: ConsulConfigurationSnapshotGatewayTest.cpp  ConsulConfigurationSnapshotStorageTest.cpp  ConsulConfigurationTest.cpp
test/service/data/: DataStorage.cpp
test/service/epics/: epics.cpp  epics_data_serialization.cpp
test/service/metric/: EpicsMetric.cpp  NodeControllerMetric.cpp  metric.h
test/service/pubsub/: common.h  kafka.cpp
test/service/scheduler/: Scheduler.cpp
test/service/storage/mongodb/: MsgpackToJsonConverter.cpp
tools/: epics-patch.sh  fetch_metric.py  fetch_metric.sh  generate-report.sh  launch_epics_ioc.sh  manage-version.sh  monitor.py  snapshot_capture.py  stress.py  test_env.sh
tools/environment/: test.ini
(+30 files in other folders)
